2001-08-16  Ron Steinke  <rsteinke@w-link.net>

	* glib/giounix.c: fixed an error in setting close_on_unref
	in g_io_channel_new_file ()

2001-08-16  Ron Steinke  <rsteinke@w-link.net>

	* glib/giochannel.c glib/glib.def glib/giochannel.h: Added
	new functions g_io_channel_[set,get]_close_on_unref ()

	* glib/giochannel.c: glib/giochannel.h: Documentation fixes

	* glib/giochannel.c: Fixed g_io_channel_write_chars ()
	so that bytes_written is always set to an appropriate
	value when it returns

	* glib/giounix.c: changed g_io_channel_get_flags () to
	set the is_readable and is_writeable flags cached
	by the channel

Wed Aug 15 11:09:56 2001  Tim Janik  <timj@gtk.org>

	* Makefile.am: let the generated .pc files depend on config.status,
	so they get correctly remade.

Sun Aug 12 21:05:13 2001  Tim Janik  <timj@gtk.org>

	* glib/gmessages.h: fix g_return_if_fail, g_assert and friends to
	have a body for G_DISABLE_CHECKS and G_DISABLE_ASSERT.
	fixes #58873.

2001-08-12  Ron Steinke  <rsteinke@w-link.net>

	* glib/giochannel.c: safer handling of errno, fixed
	a bug in an assert

Sun Aug 12 10:09:00 2001  Owen Taylor  <otaylor@redhat.com>

	* tests/iochannel-test.c (main): Find test case for
	srcdir != builddir, miscellaneous cleanups.

	* tests/Makefile.am (EXTRA_DIST): Distribute casefold.txt,
	casemap.txt iochannel-test-infile.

	* glib-2.0-uninstalled.pc.in: Fix for move of glib files
	into subdir. (Pointed out by Steve Baker)

Sat Aug  4 01:04:08 2001  Tim Janik  <timj@gtk.org>

	* glib/gscanner.c (g_scanner_unexp_token): fix INT and FLOAT warnings
	for invalid token values.

2001-08-10  Ron Steinke  <rsteinke@w-link.net>

	* glib/giochannel.c: Fixed a "sense of comparison" bug,
	added an assert to check when g_io_channels_read_chars ()
	is looping endlessly due to encoded_read_buf being corrupted.

2001-08-06  Sven Neumann  <sven@gimp.org>

	* glib/gutils.[ch]: added new function g_nullify_pointer().
	
2001-08-05  Ron Steinke  <rsteinke@w-link.net>
